<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.popularmoviesstage2.MovieDetail"
    android:padding="10dp"
    android:orientation="vertical">
    <ImageView
    android:id="@+id/movie_poster"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/title_label"
        android:layout_width="75dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/title_label_text"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:textSize="30sp"
        tools:text="@string/title_placeholder"
        android:fontFamily="sans-serif-light"
        android:layout_marginTop="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/date_label"
        android:layout_width="190dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/release_date_label_text"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:textSize="30sp"
        tools:text="@string/date_placeholder"
        android:fontFamily="sans-serif-light"
        android:layout_marginTop="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/vote_average_label"
        android:layout_width="190dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/vote_average_label_text"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/vote_average"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:textSize="30sp"
        tools:text="@string/vote_placeholder"
        android:fontFamily="sans-serif-light"
        android:layout_marginTop="10dp"/>
    </LinearLayout>
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/synopsis_label"
            android:layout_width="130dp"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/synopsis_label_text"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/synopsis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-light"
            android:textSize="25sp"
            tools:text="@string/synopsis_placeholder" />
    </LinearLayout>
    </ScrollView>
</LinearLayout>

